// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FancyLink /> should render correctly 1`] = `
<a
  className="link null"
  href="/"
  onClick={[Function]}
>
  <h3 />
</a>
`;

exports[`<FancyLink /> should render whith children passed in 1`] = `
<a
  className="link null"
  href="/"
  onClick={[Function]}
>
  <h3>
    Hello World
  </h3>
</a>
`;
